--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -143,11 +143,7 @@ body{
       color: black;
     }
 
-    .table>:not(caption)>*>*{
-      padding: 0.75rem !important;
-      position: relative;
-      
-    }
+
 
     .custom-center{
       display: flex;
@@ -166,6 +162,12 @@ body{
 
     .top-right-radius{
       border-top-right-radius: 1.25rem;
+    }
+
+    main{
+      min-height: calc(100vh - 70px);
+      align-content: center;
+      overflow-x: hidden;
     }
   
   
