--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -171,6 +171,10 @@ body{
       overflow-x: hidden;
     }
 
+    .w-80{
+      min-width: 80vw !important;
+    }
+
     .w-90{
       min-width: 100vw !important;
     }
