--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,186 +1,217 @@
-body{
-    font-family: 'Josefin Sans', sans-serif;
+body {
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+.layout {
+  padding-bottom: 150px;
+}
+
+.layout::-webkit-scrollbar {
+  -webkit-appearance: none;
+}
+
+.layout::-webkit-scrollbar:vertical {
+  width: 5px;
+}
+
+.layout::-webkit-scrollbar-button:increment,
+.contenedor::-webkit-scrollbar-button {
+  display: none;
+}
+
+.layout::-webkit-scrollbar:horizontal {
+  height: 5px;
+}
+
+.layout::-webkit-scrollbar-thumb {
+  background-color: #797979;
+  border-radius: 20px;
+  border: none;
+}
+
+.layout::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+.active>.page-link,
+.page-link.active {
+  z-index: 3;
+  color: white;
+  background-color: black;
+  border-color: black;
+}
+
+.page-link {
+  color: black;
+}
+
+
+
+.b-example-divider {
+  height: 3rem;
+  background-color: rgba(0, 0, 0, .1);
+  border: solid rgba(0, 0, 0, .15);
+  border-width: 1px 0;
+  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+}
+
+.b-example-vr {
+  flex-shrink: 0;
+  width: 1.5rem;
+  height: 100vh;
+}
+
+.bi {
+  vertical-align: -.125em;
+  fill: currentColor;
+}
+
+.nav-scroller {
+  position: relative;
+  z-index: 2;
+  height: 2.75rem;
+  overflow-y: hidden;
+}
+
+.nav-scroller .nav {
+  display: flex;
+  flex-wrap: nowrap;
+  padding-bottom: 1rem;
+  margin-top: -1px;
+  overflow-x: auto;
+  text-align: center;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch;
+}
+
+body {
+  font-size: .875rem;
+}
+
+.feather {
+  width: 16px;
+  height: 16px;
+}
+
+.custom-selected {
+  box-sizing: border-box;
+  background: rgba(0, 0, 0, .1);
+  border: 2px solid rgba(0, 0, 0, .2);
+  border-radius: 5px;
+}
+
+
+.border-blue {
+  box-sizing: content-box;
+  border: 3px solid lightblue;
+}
+
+.border-transparent {
+  box-sizing: content-box;
+  border: 3px solid transparent;
+}
+
+.shadow-right {
+  box-shadow: 16px -6px 24px -24px rgb(0 0 0 / 50%);
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
   }
-  
-  .layout{
-      padding-bottom: 150px;
-  }
-  
-  .layout::-webkit-scrollbar {
-      -webkit-appearance: none;
-  }
-  
-  .layout::-webkit-scrollbar:vertical {
-      width: 5px;
-  }
-  
-  .layout::-webkit-scrollbar-button:increment,
-  .contenedor::-webkit-scrollbar-button {
-      display: none;
-  }
-  
-  .layout::-webkit-scrollbar:horizontal {
-      height: 5px;
-  }
-  
-  .layout::-webkit-scrollbar-thumb {
-      background-color: #797979;
-      border-radius: 20px;
-      border: none;
-  }
-  
-  .layout::-webkit-scrollbar-track {
-      border-radius: 10px;
-  }
-  
-  
-  .bd-placeholder-img {
-      font-size: 1.125rem;
-      text-anchor: middle;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      user-select: none;
-    }
-  
-    .active>.page-link, .page-link.active {
-      z-index: 3;
-      color: white;
-      background-color: black;
-      border-color: black;
-    }
-  
-    .page-link {
-      color: black;
-    }
-  
-  
-  
-    .b-example-divider {
-      height: 3rem;
-      background-color: rgba(0, 0, 0, .1);
-      border: solid rgba(0, 0, 0, .15);
-      border-width: 1px 0;
-      box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-    }
-  
-    .b-example-vr {
-      flex-shrink: 0;
-      width: 1.5rem;
-      height: 100vh;
-    }
-  
-    .bi {
-      vertical-align: -.125em;
-      fill: currentColor;
-    }
-  
-    .nav-scroller {
-      position: relative;
-      z-index: 2;
-      height: 2.75rem;
-      overflow-y: hidden;
-    }
-  
-    .nav-scroller .nav {
-      display: flex;
-      flex-wrap: nowrap;
-      padding-bottom: 1rem;
-      margin-top: -1px;
-      overflow-x: auto;
-      text-align: center;
-      white-space: nowrap;
-      -webkit-overflow-scrolling: touch;
-    }
-  
-    body {
-      font-size: .875rem;
-    }
-    
-    .feather {
-      width: 16px;
-      height: 16px;
-    }
-  
-    .custom-selected {
-      box-sizing: border-box;
-      background: rgba(0,0,0,.1);
-      border: 2px solid rgba(0,0,0,.2);
-      border-radius: 5px;
-    }
-  
-  
-    .border-blue{
-      box-sizing: content-box;
-      border: 3px solid lightblue;
-    }
-    .border-transparent{
-      box-sizing: content-box;
-      border: 3px solid transparent;
-    }
+}
 
-    .shadow-right{
-      box-shadow: 16px -6px 24px -24px rgb(0 0 0 / 50%);
-    }
-    
-    @media (min-width: 768px) {
-      .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-      }
-    }
+.user-select-none {
+  user-select: none;
+}
 
-    .user-select-none{
-      user-select: none;
-    }
+.btn-white {
+  background-color: transparent;
+  border: 1px solid white;
+  color: white;
+}
 
-    .btn-white{
-      background-color: transparent;
-      border: 1px solid white;
-      color: white;
-    }
+.btn-white:hover {
+  background-color: white;
+  color: black;
+}
 
-    .btn-white:hover{
-      background-color: white;
-      color: black;
-    }
+.modal{
+  box-sizing: content-box;
+}
 
 
 
-    .custom-center{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100%;
-      width: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-      text-align: center;
-    }
-  
-    .top-left-radius{
-      border-top-left-radius: 1.25rem;
-    }
+.custom-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-align: center;
+}
 
-    .top-right-radius{
-      border-top-right-radius: 1.25rem;
-    }
+.top-left-radius {
+  border-top-left-radius: 1.25rem;
+}
 
-    main{
-      min-height: calc(100vh - 70px);
-      align-content: center;
-      overflow-x: hidden;
-    }
+.top-right-radius {
+  border-top-right-radius: 1.25rem;
+}
 
-    .w-80{
-      min-width: 80vw !important;
-    }
+main {
+  min-height: calc(100vh - 70px);
+  align-content: center;
+  overflow-x: hidden;
+}
 
-    .w-90{
-      min-width: 100vw !important;
-    }
+.w-80 {
+  min-width: 80vw !important;
+}
 
-    .hover:hover{
-      scale: 1.1;
-    }
-  
-  
+.w-90 {
+  min-width: 100vw !important;
+}
+
+.hover:hover {
+  scale: 1.1;
+}
+
+.modal::-webkit-scrollbar {
+  -webkit-appearance: none;
+}
+
+.modal::-webkit-scrollbar:vertical {
+  width: 5px;
+}
+
+.modal::-webkit-scrollbar-button:increment,
+.contenedor::-webkit-scrollbar-button {
+  display: none;
+}
+
+.modal::-webkit-scrollbar:horizontal {
+  height: 5px;
+}
+
+.modal::-webkit-scrollbar-thumb {
+  background-color: #797979;
+  border-radius: 20px;
+  border: none;
+}
+
+.modal::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
