--- a/src/scss/productRecipes.scss
+++ b/src/scss/productRecipes.scss
@@ -27,10 +27,7 @@
 
 .modifierGroup-container {
   position: relative;
-  border: 1px solid rgba(0, 0, 0, .1);
   padding-top: 66px !important;
-  border-top-right-radius: 15px;
-  border-top-left-radius: 15px;
   overflow: hidden;
 }
 
@@ -41,12 +38,11 @@
 }
 
 .modifierGroup-title {
+  border-bottom: 1px solid rgba(0,0,0,.05);
   position: absolute;
   top: 0;
   width: 100%;
   left: 0;
-  padding: 1rem 0;
-  text-align: center;
-  background: rgba(0, 0, 0, 1);
-  color: white;
+  padding: 1rem;
+  text-align: left;
 }
