--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -1,9 +1,11 @@
-.table {}
+.table {
+  color: #fff;
+
+}
 
 .table>:not(caption)>*>* {
   padding: 0.75rem !important;
   position: relative;
-
 }
 
 .table-container::-webkit-scrollbar {
@@ -67,4 +69,8 @@
   color: #fff;
   background-color: rgba(220, 53, 69, .6);
   border-color: rgba(255, 255, 255, .5);
+}
+
+.table-striped>tbody>tr:nth-of-type(odd)>* {
+  color: #fff
 }
